# Rust

./: README.md
cep_brazil/: Cargo.toml  README.md
cep_brazil/src/: main.rs
fibonacci_recursive/: .gitignore  Cargo.toml  README.md
fibonacci_recursive/src/: main.rs
qrcode/: Cargo.toml
qrcode/src/: main.rs
struct_stack/: .gitignore  Cargo.toml
struct_stack/src/: lib.rs  main.rs
