[package]
name = "cep_brazil"
version = "0.1.0"
authors = ["Netinho Santos <bjsnetinho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }