[package]
name = "qrcode"
version = "0.1.0"
authors = ["Netinho Santos <netinho.kernel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = { version = "0.6.0", default-features = true }
image = "0.18.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
